maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:37: error: ':' expected but ')' found.
def isDirectionFree (dir) :Boolean = {
                        ^Escaper:46: error: identifier expected but '}' found.
}
^